notification html/css

--- a/src/add.html
+++ b/src/add.html
@@ -62,11 +62,279 @@
 
 				<p><label>Daily Frequency</label></p>
 				<div id="daily-button">
-					<label> <input id="once" type="radio" name="day" value="one"><span>1</span></label>
-					<label> <input id="twice" type="radio" name="day" value="two"><span>2</span></label>
-					<label> <input id="thrice" type="radio" name="day" value="three"><span>3</span></label>
+					<label> <input id="once" type="radio" name="day" value="one" onclick="notify();"><span>1</span></label>
+					<label> <input id="twice" type="radio" name="day" value="two" onclick="notify();"><span>2</span></label>
+					<label> <input id="thrice" type="radio" name="day" value="three" onclick="notify();"><span>3</span></label>
 					<span id="times">times</span>
 				</div>
+
+				<p><label>Notifications</label></p>
+				<div class="onoffswitch" >
+   					<input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="myonoffswitch" checked onclick="incCounter();">
+    				<label class="onoffswitch-label" for="myonoffswitch">
+        			<span class="onoffswitch-inner"></span>
+        			<span class="onoffswitch-switch"></span>
+    				</label>
+				</div>
+
+			<div class="notifications1">
+			<p id="alarm">Alarm 1</p>
+				<select id="times">
+  					<option value="1">1</option>
+ 					<option value="2">2</option>
+  					<option value="3">3</option>
+				  	<option value="4">4</option>
+  					<option value="5">5</option>
+ 					<option value="6">6</option>
+  					<option value="7">7</option>
+				  	<option value="8">8</option>
+  					<option value="9">9</option>
+ 					<option value="10">10</option>
+  					<option value="11">11</option>
+				  	<option value="12">12</option>
+				</select>
+
+				<select id="times">
+  					<option value="00">:00</option>
+ 					<option value="01">:01</option>
+  					<option value="02">:02</option>
+				  	<option value="03">:03</option>
+  					<option value="04">:04</option>
+ 					<option value="05">:05</option>
+ 					<option value="06">:06</option>
+  					<option value="07">:07</option>
+				  	<option value="08">:08</option>
+  					<option value="09">:09</option>
+ 					<option value="10">:10</option>
+  					<option value="11">:11</option>
+				  	<option value="12">:12</option>
+				  	<option value="13">:13</option>
+  					<option value="14">:14</option>
+ 					<option value="15">:15</option>
+ 					<option value="16">:16</option>
+  					<option value="17">:17</option>
+				  	<option value="18">:18</option>
+  					<option value="19">:19</option>
+ 					<option value="20">:20</option>
+  					<option value="21">:21</option>
+				  	<option value="22">:22</option>
+				  	<option value="23">:23</option>
+  					<option value="24">:24</option>
+ 					<option value="25">:25</option>
+ 					<option value="26">:26</option>
+  					<option value="27">:27</option>
+				  	<option value="28">:28</option>
+  					<option value="29">:29</option>
+ 					<option value="30">:30</option>
+  					<option value="31">:31</option>
+				  	<option value="32">:32</option>
+				  	<option value="33">:33</option>
+  					<option value="34">:34</option>
+ 					<option value="35">:35</option>
+ 					<option value="36">:36</option>
+  					<option value="37">:37</option>
+				  	<option value="38">:38</option>
+  					<option value="39">:39</option>
+  					<option value="40">:40</option>
+  					<option value="41">:41</option>
+				  	<option value="42">:42</option>
+				  	<option value="43">:43</option>
+  					<option value="44">:44</option>
+ 					<option value="45">:45</option>
+ 					<option value="46">:46</option>
+  					<option value="47">:47</option>
+				  	<option value="48">:48</option>
+  					<option value="49">:49</option>
+ 					<option value="50">:50</option>
+  					<option value="51">:51</option>
+				  	<option value="52">:52</option>
+				  	<option value="53">:53</option>
+  					<option value="54">:54</option>
+ 					<option value="55">:55</option>
+ 					<option value="56">:56</option>
+  					<option value="57">:57</option>
+				  	<option value="58">:58</option>
+  					<option value="59">:59</option>
+				</select>
+
+				<select id="times">
+  					<option value="am">am</option>
+ 					<option value="pm">pm</option>
+				</select>
+			</div>	
+
+		<div class="notifications2">
+			<p id="alarm">Alarm 2</p>
+				<select id="times">
+  					<option value="1">1</option>
+ 					<option value="2">2</option>
+  					<option value="3">3</option>
+				  	<option value="4">4</option>
+  					<option value="5">5</option>
+ 					<option value="6">6</option>
+  					<option value="7">7</option>
+				  	<option value="8">8</option>
+  					<option value="9">9</option>
+ 					<option value="10">10</option>
+  					<option value="11">11</option>
+				  	<option value="12">12</option>
+				</select>
+
+				<select id="times">
+  					<option value="00">:00</option>
+ 					<option value="01">:01</option>
+  					<option value="02">:02</option>
+				  	<option value="03">:03</option>
+  					<option value="04">:04</option>
+ 					<option value="05">:05</option>
+ 					<option value="06">:06</option>
+  					<option value="07">:07</option>
+				  	<option value="08">:08</option>
+  					<option value="09">:09</option>
+ 					<option value="10">:10</option>
+  					<option value="11">:11</option>
+				  	<option value="12">:12</option>
+				  	<option value="13">:13</option>
+  					<option value="14">:14</option>
+ 					<option value="15">:15</option>
+ 					<option value="16">:16</option>
+  					<option value="17">:17</option>
+				  	<option value="18">:18</option>
+  					<option value="19">:19</option>
+ 					<option value="20">:20</option>
+  					<option value="21">:21</option>
+				  	<option value="22">:22</option>
+				  	<option value="23">:23</option>
+  					<option value="24">:24</option>
+ 					<option value="25">:25</option>
+ 					<option value="26">:26</option>
+  					<option value="27">:27</option>
+				  	<option value="28">:28</option>
+  					<option value="29">:29</option>
+ 					<option value="30">:30</option>
+  					<option value="31">:31</option>
+				  	<option value="32">:32</option>
+				  	<option value="33">:33</option>
+  					<option value="34">:34</option>
+ 					<option value="35">:35</option>
+ 					<option value="36">:36</option>
+  					<option value="37">:37</option>
+				  	<option value="38">:38</option>
+  					<option value="39">:39</option>
+  					<option value="40">:40</option>
+  					<option value="41">:41</option>
+				  	<option value="42">:42</option>
+				  	<option value="43">:43</option>
+  					<option value="44">:44</option>
+ 					<option value="45">:45</option>
+ 					<option value="46">:46</option>
+  					<option value="47">:47</option>
+				  	<option value="48">:48</option>
+  					<option value="49">:49</option>
+ 					<option value="50">:50</option>
+  					<option value="51">:51</option>
+				  	<option value="52">:52</option>
+				  	<option value="53">:53</option>
+  					<option value="54">:54</option>
+ 					<option value="55">:55</option>
+ 					<option value="56">:56</option>
+  					<option value="57">:57</option>
+				  	<option value="58">:58</option>
+  					<option value="59">:59</option>
+				</select>
+
+				<select id="times">
+  					<option value="am">am</option>
+ 					<option value="pm">pm</option>
+				</select>
+			</div>	
+
+			<div class="notifications3">
+				<p id="alarm">Alarm 3</p>
+				<select id="times">
+  					<option value="1">1</option>
+ 					<option value="2">2</option>
+  					<option value="3">3</option>
+				  	<option value="4">4</option>
+  					<option value="5">5</option>
+ 					<option value="6">6</option>
+  					<option value="7">7</option>
+				  	<option value="8">8</option>
+  					<option value="9">9</option>
+ 					<option value="10">10</option>
+  					<option value="11">11</option>
+				  	<option value="12">12</option>
+				</select>
+
+				<select id="times">
+  					<option value="00">:00</option>
+ 					<option value="01">:01</option>
+  					<option value="02">:02</option>
+				  	<option value="03">:03</option>
+  					<option value="04">:04</option>
+ 					<option value="05">:05</option>
+ 					<option value="06">:06</option>
+  					<option value="07">:07</option>
+				  	<option value="08">:08</option>
+  					<option value="09">:09</option>
+ 					<option value="10">:10</option>
+  					<option value="11">:11</option>
+				  	<option value="12">:12</option>
+				  	<option value="13">:13</option>
+  					<option value="14">:14</option>
+ 					<option value="15">:15</option>
+ 					<option value="16">:16</option>
+  					<option value="17">:17</option>
+				  	<option value="18">:18</option>
+  					<option value="19">:19</option>
+ 					<option value="20">:20</option>
+  					<option value="21">:21</option>
+				  	<option value="22">:22</option>
+				  	<option value="23">:23</option>
+  					<option value="24">:24</option>
+ 					<option value="25">:25</option>
+ 					<option value="26">:26</option>
+  					<option value="27">:27</option>
+				  	<option value="28">:28</option>
+  					<option value="29">:29</option>
+ 					<option value="30">:30</option>
+  					<option value="31">:31</option>
+				  	<option value="32">:32</option>
+				  	<option value="33">:33</option>
+  					<option value="34">:34</option>
+ 					<option value="35">:35</option>
+ 					<option value="36">:36</option>
+  					<option value="37">:37</option>
+				  	<option value="38">:38</option>
+  					<option value="39">:39</option>
+  					<option value="40">:40</option>
+  					<option value="41">:41</option>
+				  	<option value="42">:42</option>
+				  	<option value="43">:43</option>
+  					<option value="44">:44</option>
+ 					<option value="45">:45</option>
+ 					<option value="46">:46</option>
+  					<option value="47">:47</option>
+				  	<option value="48">:48</option>
+  					<option value="49">:49</option>
+ 					<option value="50">:50</option>
+  					<option value="51">:51</option>
+				  	<option value="52">:52</option>
+				  	<option value="53">:53</option>
+  					<option value="54">:54</option>
+ 					<option value="55">:55</option>
+ 					<option value="56">:56</option>
+  					<option value="57">:57</option>
+				  	<option value="58">:58</option>
+  					<option value="59">:59</option>
+				</select>
+
+				<select id="times">
+  					<option value="am">am</option>
+ 					<option value="pm">pm</option>
+				</select>
+			</div>	
+
 				<p><label><span id="others_text">Others: </span><input id="others" type="text" name="day" placeholder="More than 3 times"></label></p>
 				<p id="save_p"><input id="save" type="button" value="Save It" onclick="addHabit();"></p> <!-- onclick ="location.href='list.html'" -->
 			</form>
@@ -75,10 +343,7 @@
 
 		<script>
 			Parse.initialize("Ih70t530LwJAnRJungwuPtE2nE3eakzmwVuZHb6O", "sE6Y6iMcoTTa9Z3pBCaAtwnD9F1L9SlWHBKlDQ7h");
-
-			var Habit = Parse.Object.extend("Habit");
-			var habit = new Habit();
-			var fileName;
+			var counter = 0;
 
 			function selectImage(name) {
 				//Clear all the other effects
@@ -89,7 +354,37 @@
 				var image = document.getElementById(name);
 				image.style.border = "5px solid #42A5F5";
 
-				fileName = name;
+			}
+
+			function notify() {
+				if( counter % 2 == 1) {
+					$('.notifications1').css('display','none');
+					$('.notifications2').css('display','none');
+					$('.notifications3').css('display','none');
+				} else {
+					switch ($("input[name='day']:checked").val()) {
+						case "one":
+							$('.notifications1').css('display','block');
+							break;
+						case "two":
+							$('.notifications1').css('display','block');
+							$('.notifications2').css('display','block');	
+							break;
+						case "three":
+							$('.notifications1').css('display','block');
+							$('.notifications2').css('display','block');
+							$('.notifications3').css('display','block');
+							break;
+						default: 
+							$('.notifications1').css('display','block');	
+					}
+
+				}
+			}
+
+			function incCounter() {
+				counter ++;
+				notify();
 			}
 
 			function addHabit() {
